tdf#156236: For the rx or ry properties, "0" is valid

Change-Id: I32c865e409a339c444440e00ee0f624c45380773
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154307
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>